<resources>
    <string name="app_name">Notes and password manager</string>
    <string name="welcome_to_the_application">Hey there! Welcome Back</string>
    <string name="welcome_back">welcome back</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="enter_your_email_id">Enter your email id</string>
    <string name="enter_your_password">enter your password</string>
    <string name="login">login</string>
    <string name="forget_password">Forget Password</string>
    <string name="new_user_want_to_sign_in">New User! Want To Sign In ?</string>
    <string name="new_user">New User</string>
    <string name="nice_to_see_you_here">Nice To See You Here</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="enter_your_password_">Enter Your Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="want_to_login">Want To Login ?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="don_t_worry_we_are_here">Don\'t Worry We Are Here</string>
    <string name="enter_your_registered_mail">Enter your registered mail</string>
    <string name="click_here_to_recover">Click Here To Recover</string>
    <string name="go_back_to_login_screen">Go Back To Login Screen</string>
    <string name="this_is_your_code_which_appear_here">This is your code which appear here</string>
    <string name="no_data">No Data.</string>
</resources>
