<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".forgotpassword">




    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/centerline3"
        android:layout_centerInParent="true">

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:layout_marginBottom="120dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/forgot_password"
            android:textSize="35sp"
            android:textColor="@color/black"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/don_t_worry_we_are_here"
            android:textSize="23sp"
            android:textColor="@color/black">

        </TextView>

    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:inputType="textEmailAddress"
        android:layout_marginRight="30dp"
        android:layout_above="@id/centerline3"
        android:id="@+id/forgotpassword"
        android:hint="@string/enter_your_registered_mail"
        android:layout_marginBottom="10dp"
        android:autofillHints="emailAddress"
        tools:ignore="TextFields">

    </EditText>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/click_here_to_recover"
        android:id="@+id/passwordrecoverbutton"
        android:layout_below="@id/centerline3"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp">

    </Button>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/go_back_to_login_screen"
        android:id="@+id/gobacktologin"
        android:layout_marginBottom="30dp"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:textAlignment="center">

    </TextView>


</RelativeLayout>