<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F9F9F9"
    tools:context=".MainActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
android:background="@drawable/img1">

    </RelativeLayout>
    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/gotoforgotpassword"
        android:id="@+id/progressbarofmainactivity"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:visibility="invisible">

    </ProgressBar>

    <RelativeLayout
        android:id="@+id/centerline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">



    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="200dp"
        android:layout_above="@id/centerline"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/indigo_daisy"
            android:text="@string/welcome_back"
            android:textColor="@color/green"
            android:textSize="42sp"
            android:textStyle="bold">

        </TextView>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/login_to_continue"
            android:textSize="23sp"
            android:textColor="@color/colorPrimaryDark">

        </TextView>

    </LinearLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/centerline"
        android:layout_marginBottom="30dp"
        android:id="@+id/email"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/loginemail"
            android:hint="@string/enter_your_email_id"
            android:inputType="textEmailAddress"
            tools:ignore="SpeakableTextPresentcheck"
            android:importantForAutofill="no">

        </EditText>


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_marginTop="0dp"
        android:id="@+id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        >

        <EditText
            android:id="@+id/loginpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            tools:ignore="SpeakableTextPresentcheck">

        </EditText>
    </com.google.android.material.textfield.TextInputLayout>


    <RelativeLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_below="@id/password"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/button_custom">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginStart="8dp"
            android:text="@string/login"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            >


        </TextView>

    </RelativeLayout>

    <TextView
        android:id="@+id/gotoforgotpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="20dp"
        android:text="@string/forget_password"
        android:textAlignment="center"
        android:textColor="#4CAF50"
        android:textSize="20sp">

    </TextView>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/button_custom"
        android:layout_alignParentBottom="true"
        android:id="@+id/gotosignup">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginStart="8dp"
            android:textSize="16sp"
            android:text="@string/new_user_want_to_sign_in"
            android:layout_centerInParent="true"
            android:textColor="@color/white"
            >

        </TextView>

    </RelativeLayout>







</RelativeLayout>










